--- a/about.html
+++ b/about.html
@@ -5,18 +5,20 @@ top-image: https://source.unsplash.com/MqJX_8EaStM/2000x1322?a=.png
 bottom_image: https://www.fg-a.com/backgrounds/black-planet-surface-1920.jpg
 ---
 <!-- This file allows us to customize the layout of the about page. -->
-<section class="hero" style="background-image: url({{ site.baseurl }}/images/background/aboutus.jpg)">
-    <div class="inner-hero text-container">
+<section class="hero" style="background-image: url({{ site.baseurl }}/images/background/aboutus.jpg); opacity: 0.5;">
+    <div class="inner-hero text-container" style="opacity: 1;">
         <div class="hero-text-container">
             
-            <div style="background: #7F5B53;border: 1px solid #7F5B53;margin: 3%;">
+            <div style="background: #323232;border: 1px solid #191919;margin: 3%;">
                 <h1 class="editable module" style="font-size: 5.8em; color: white;">
                     About Us
                 </h1>
             </div>
-            <p class="subtext editable module" style="font-size: 0.8em; margin: 3%;">
-                <br /> Bestowing Sovereignty Upon the Sikh Youth of Tomorrow. .
-            </p> 
+            <div style=" background: #323232a9;">
+                <p class="subtext editable module" style="font-size: 0.8em; margin: 3%;">
+                    <br /> Bestowing Sovereignty Upon the Sikh Youth of Tomorrow. .
+                </p> 
+            </div>
         </div>
     </div>
     <div class="learn-more">
