--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ bottom_image: https://www.fg-a.com/backgrounds/black-planet-surface-1920.jpg
                 </h2>
                 <p  data-aos="fade-up" class="editable">
                     Sikhism is a monotheistic religion from the Punjab region of India. It was founded by Guru Nanak, and the name means "learner" or "disciple." Check out the link below to learn more.
-                    <div data-aos="fade-up" class="editable"data-aos="fade-up" class="editable" style="font-size: 1.68em;font-family: Lato, sans-serif; padding-left: 1em; color:#7F5B53">
+                    <div data-aos="fade-up" class="editable"data-aos="fade-up" class="editable" style="font-size: 1.68em;font-family: Lato, sans-serif; padding-left: 1em; color:#ffffff">
                         As the brotherhood under Guru Gobind Singh Ji's banner continues to grow, we implore all who are interested to join our movement. Whether it be helping with Seva, wanting to do Kirtan or simply being in the high society of Singhs, reach out and get involved today.
                     </div>
                 </p>
