--- a/media.html
+++ b/media.html
@@ -10,9 +10,9 @@ bottom_image: https://www.fg-a.com/backgrounds/black-planet-surface-1920.jpg
     <div class="inner-hero text-container">
         <div class="hero-text-container">
             
-            <div style="background: #343333;border: 1px solid #7F5B53;margin: 3%;">
+            <div style="background: #1d1d1d;border: 1px solid #7F5B53;margin: 3%;">
                 <h1 class="editable module" style="font-size: 5.8em; color: white;">
-                    MISL Shop
+                    Media Gallery
                 </h1>
             </div>
         </div>
@@ -38,7 +38,7 @@ bottom_image: https://www.fg-a.com/backgrounds/black-planet-surface-1920.jpg
         <div class="container flex">
             <div class="text">
                 <h2 data-aos="fade-up" class="editable">
-                    Merch here
+                    Photos here
                 </h2>
             </div>
         </div>
